# memorylake-client

./: .env.example  .gitignore  1753683727739-0b3a4f6e84284f1b9afa951ab7873c29.sh  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  demo_app.py  memory_backup.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cicd/: test-all.sh
claude-memory-sdk/: MANIFEST.in  README.md  pyproject.toml  setup.py
claude-memory-sdk/claude_memory_sdk/: __init__.py  client.py  conversation.py  exceptions.py  memory_operations.py  models.py
claude-memory-sdk/examples/: basic_usage.py  complete_example.py
claude-memory-server/: README.md  main.py  requirements.txt
claude-memory-server/claude_memory_server/: __init__.py  app.py  config.py  memory_manager.py  session_manager.py
claude_memory_sdk/: __init__.py  client.py  exceptions.py  memory_backend.py  memory_tool.py
claude_memory_sdk/examples/: README.md  __init__.py  basic_chat.py  custom_backend.py  manage_memory.py  print_model.py
example/: chat.py
examples/: advanced_features_demo.py
memory_lake_sdk/: __init__.py
memorylake/: __init__.py  memorytool.py
memorylake/test/: test_memorytool_example.py
memorylake_sdk/examples/: basic_chat.py  custom_backend.py  manage_memory.py  print_model.py
