[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-memory-sdk"
version = "1.0.0"
description = "Python SDK for Claude Memory Q&A API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Claude Memory SDK Team", email = "support@example.com"}
]
maintainers = [
    {name = "Claude Memory SDK Team", email = "support@example.com"}
]
keywords = ["claude", "ai", "memory", "api", "sdk", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]
docs = [
    "mkdocs>=1.2",
    "mkdocs-material>=7.0",
]

[project.urls]
Homepage = "https://github.com/example/claude-memory-sdk"
Documentation = "https://claude-memory-sdk.readthedocs.io/"
Repository = "https://github.com/example/claude-memory-sdk.git"
"Bug Reports" = "https://github.com/example/claude-memory-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_memory_sdk*"]

[tool.setuptools.package-data]
claude_memory_sdk = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["claude_memory_sdk"]
omit = [
    "*/tests/*",
    "*/test_*",
]